Added a few tests to VolvoFH16Test.java